--- a/ItemBasedCollaborativeFilteringExample.ipynb
+++ b/ItemBasedCollaborativeFilteringExample.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -154,7 +154,7 @@
        "Movie10   0      1      1      0      1      0      0      1"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -206,6 +206,9 @@
     }
    ],
    "source": [
+    "#Get the our Rating and our seen and unseen movies\n",
+    "#\n",
+    "\n",
     "#get number of movies\n",
     "movies = len(rating)\n",
     "#get our ratings\n",
@@ -236,21 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "\n",
-    "\n",
-    "\n",
-    "         "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -280,7 +269,7 @@
        "         0.5       ,  0.35355339,  0.57735027,  0.4472136 ,  1.        ]])"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -295,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -372,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -460,6 +449,9 @@
     }
    ],
    "source": [
+    "#Get the neighbors and sort them descending\n",
+    "#\n",
+    "\n",
     "#creating array for the neighbors\n",
     "w = 3\n",
     "h = len(seenMovies)*len(notSeenMovies)\n",
@@ -496,29 +488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[0, 0.77459666924148352], [1, 0.77459666924148352], [4, 0.51639777949432231], [7, 0.51639777949432231], [0, 0.51639777949432231], [1, 0.51639777949432231], [4, 0.51639777949432231], [9, 0.5], [6, 0.35355339059327373], [4, 0.28867513459481287], [7, 0.28867513459481287], [0, 0.25819888974716121], [1, 0.25819888974716121], [4, 0.25819888974716121], [7, 0.25819888974716121], [0, 0.0], [1, 0.0], [0, 0], [0, 0], [0, 0], [0, 0], [0, 0], [0, 0], [0, 0], [0, 0], [0, 0], [0, 0], [0, 0], [0, 0], [0, 0]]\n"
-     ]
-    }
-   ],
-   "source": [
-    "\n",
-    "        \n",
-    "\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -547,7 +517,10 @@
     }
    ],
    "source": [
-    "#neede variables and 2 new arrays\n",
+    "#removing some dublicates from the neighbor array and printing recommendations\n",
+    "#\n",
+    "\n",
+    "#needed variables and 2 new arrays\n",
     "j = 2\n",
     "k = 30\n",
     "counter2 = 0\n",
